lab1/Test/L1-A-8-46.cmm
struct {
};
int ( Hz2Zy7755Zwh5Y_ULFf ( ) {
  struct gyBbsx91fx50 {
  }p3XUi9tq ;
  struct Kx3mfx8vNhi5xi6 JRJ9A2xLau ;
  int CBN90fQNN , qkNJYDaYO5gHVcP [ 1070174232 ] = 
    a6iOOETquKdAD ;
  XDajeBacFfYCfUsJh || s1jNT65 && forCDsW7EFfuLLL 
    < Tb + KN2foaH1v6BnHcKusTVV / ! - UsXCiWuRzExYzrG2qMrQ 
    [ gCBXziaS = YsY2M7prN5xOfdDMT = MXZC9i != vjHuriBRv88_53CUW1 
    * ! - MWqczwu ( Pn1 , RcvHtBxBwEdSvTril1 = t2E5BrUth8SgaC8hp5hf 
    || ebxzYcx == JML9ne / c2IUUJR0u [ UBgGlrI && w0 <= 
    - ( GxWw4k_m29DkVmvlbiHE || rukhj >= X39EwIT8Wj1 ( 
    qjB7kiNpuUCzPc1DCG > yqW ) * - 1956010026 && pn_AqTV8lvn 
    ) ] ) - 1232157722.824704383 ] . gf6DJKqj1SsxybOU 
    * - KhWnzwvC ( ) ;
}
float WgQl8KAsvlOvYQY 
;
int qLd ( int hzVZbwXQyQ , int + QbAbaNssJGrXGBy ) 
  {
}
int && ;
int D34DGmUbQjnvBUNAeVd ( ) {
}
int ;
int iFN96 , mbZ2ypOdFJ5KQZ7 

;
int ;
int zEf1vyHqVmBPI7xfE_ ( ) {
  if ( a5zSn4wGUKHDELPrH4kl )   SG9yyfwhXRPpB if ;
else   if ( aZoVqx3zbIIY )   while ( _Oq8vgD_thxFhA8mPa 
    )   LQQRxVKdzD4W91 ;



  if ( aSSNn83i ) >=   if ( O71K5Ouq ) {
  }else   return E ;


}
int ;
